# bwu_redux_devtools

./: .clippy.toml  .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  input.css  mprocs.yaml  package-lock.json  package.json  rustfmt.toml
.github/workflows/: ci.yml
assets/: tailwind.css
src/: devtools_watch.rs  lib.rs  main.rs  pause_controller.rs  route.rs  standalone_server.rs
src/components/: focus_provider.rs  hooks.rs  icon_tooltip.rs  icons.rs  mod.rs
src/components/daisyui/: drawer.rs  kbd.rs  lazy_list.rs  menu.rs  mod.rs  tab.rs  tooltip.rs
src/components/dialog/: component.rs  style.css
src/components/tabs/: component.rs  style.css
src/components/tooltip/: component.rs  style.css
src/components/virtual_list/: component.rs
src/devtools_server/: mcp.rs  mod.rs  server.rs  watch_hub.rs
src/redux/: actions.rs  mod.rs  pause_middleware.rs  pause_sink.rs  reducers.rs  ron_diff.rs  selectors.rs  storage_middleware.rs
src/redux/state/: app_id.rs  mod.rs  themes.rs
src/views/: mod.rs
src/views/app_state/: action_list_item_facade.rs  app_settings_dialog.rs  app_settings_facade.rs  app_settings_page.rs  app_state_view.rs  app_state_view_facade.rs  mod.rs  state_explorer.rs  state_explorer_facade.rs  states_list.rs  states_list_facade.rs
src/views/home/: home_view.rs  home_view_facade.rs  mod.rs
